/*
Overview of what myapa is etc..
*/
syntax = "proto3";

/*
Additional overview of what myapa is etc..
*/
package istio.mixer.adapter.MyApa;

import "mixer/adapter/model/v1beta1/extensions.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;

/* my template
*/
message Template {
    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, string> dimensions = 5;

    istio.policy.v1beta1.TimeStamp timeStamp = 6;

    istio.policy.v1beta1.Duration duration = 7;
}

/* my outputtemplate
*/
message OutputTemplate {

    int64 int64Primitive = 1;

    bool boolPrimitive = 2;

    double doublePrimitive = 3;

    string stringPrimitive = 4;

    map<string, string> dimensions = 5;

    istio.policy.v1beta1.TimeStamp timeStamp = 6;

    istio.policy.v1beta1.Duration duration = 7;
}
